--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <title>personal api app</title>
 </head>
 
-<body ng-controller="mainController">
+<body>
+<h1>Personal API</h1>
+
+<div ng-view></div>
 
 
 
@@ -13,5 +16,11 @@
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
+<script src="app.js"></script>
+<script src="mainController.js"></script>
+<script src="home/homeCtrl.js"></script>
+<script src="me/meCtrl.js"></script>
+<script src="skills/skillsCtrl.js"></script>
+<script src="mainService.js"></script>
 </body>
 </html>
